добавляет медиазапрос для мобильных устройств

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './modern-normalize';
+@import './gallery';
 
 // Vars ---------------------------------------------------------------- //
 $basicLightbox__background: rgba(0, 0, 0, 0.8) !default;
