заканчивает модалку и нотификацию

--- a/src/templates/imagesTemplate.hbs
+++ b/src/templates/imagesTemplate.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class="gallery-item">
+<li class="gallery-item" data-large-image={{largeImageURL}}>
     <div class="photo-card">
         <img class="photo-card__img" src="{{webformatURL}}" alt="{{id}}" />
 
