--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,20 +1,3 @@
-img.photo-card__img {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.gallery {
-  list-style: none;
-  margin: 20px 0;
-  padding: 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-areas:
-    'gallery-item gallery-item gallery-item gallery-item'
-    'gallery-item gallery-item gallery-item gallery-item'
-    'gallery-item gallery-item gallery-item gallery-item';
-  grid-gap: 10px;
-}
-
 .gallery-item {
   position: relative;
   display: flex;
@@ -22,7 +5,17 @@ img.photo-card__img {
   width: 1fr;
   grid-area: 'gallery-item';
   border-radius: 10px;
+  overflow: hidden;
+  object-fit: cover;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.gallery-item:hover,
+.gallery-item:focus {
+  .stats {
+    background-color: rgba(255, 255, 255, 1);
+  }
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
 }
 
 .stats {
@@ -51,6 +44,11 @@ p.stats-item {
   margin: 0;
   padding: 0;
   //   border-radius: 5px;
+}
+
+p.stats-item:hover,
+p.stats-item:focus {
+  color: rgb(0, 0, 0);
 }
 
 .gallery {
