--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,7 +1,22 @@
 .navbar {
   padding: 0;
-  height: 3em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  @media screen and (max-width: 444px) {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.form-control {
+  @media screen and (max-width: 444px) {
+    width: 100%;
+  }
+}
+.btn {
+  @media screen and (max-width: 575px) {
+    width: 100%;
+  }
 }
 
 .navbar-brand {
