сделал прелоадер для странички

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import './modern-normalize';
 @import './gallery';
+@import './preloader';
 
 // Vars ---------------------------------------------------------------- //
 $basicLightbox__background: rgba(0, 0, 0, 0.8) !default;
